Fixed issue with particle animation and stage overflow

--- a/js/sketch.css
+++ b/js/sketch.css
@@ -29,7 +29,7 @@ body {
   border-style: solid;
   border-color: #7A9D96;
   border-width: 5px;
-  overflow:auto;
+  overflow:hidden;
 }
 
 .flex-container {
@@ -56,16 +56,6 @@ body {
   align-self: center;
 }
 
-::-webkit-scrollbar {
-  -webkit-appearance: none;
-  width: 7px;
-}
-::-webkit-scrollbar-thumb {
-  border-radius: 4px;
-  background-color: rgba(0, 0, 0, .5);
-  -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
-}
-
 .questions {
 height: 80%;
   margin:10px;
@@ -81,12 +71,11 @@ height: 80%;
 #equationdiv select {
   width: 36px;
   height: 25px;
-
   text-align: center;
 }
 
 #simInput {
-  background-color: #A5A5AF;
+  background-color: #808080;
   display: flex;
   flex-direction: row;
 
@@ -166,7 +155,7 @@ border-width: 2px;
 }
 
 #particleControl {
-  background-color: #A5A5AF;
+  background-color: #808080;
   display:flex;
   justify-content: flex-start;
   padding:8px;
